# AeroCM

./: README.md  altitude_effect.ipynb  climate_models_comparison.ipynb  climate_models_uncertainties.ipynb  map-Copy1.ipynb  map.ipynb  mean_data_ncfile.ipynb  metrics.ipynb  metrics_basic-Copy1.ipynb  metrics_basic-Copy2.ipynb  metrics_basic-NOx-Copy1.ipynb  metrics_basic-NOx.ipynb  metrics_basic.ipynb  metrics_pulse_sensitivity.ipynb  metrics_time_horizon_sensitivity.ipynb  paper.ipynb  pyproject.toml  requirements-paper.txt  requirements.txt  route_contrails.ipynb  sensitivity_analyses.ipynb  surrogate_models.ipynb  tcre_calculation.ipynb  uncertainty_analyses.ipynb  uncertainty_and_sensitivity_analyses.ipynb  validation_NOx.ipynb
.github/workflows/: build_release.yml
aerocm/: example_climate_metrics.ipynb  example_climate_simulation.ipynb  example_simulation.ipynb
aerocm/climate_data/: dallara_data.csv
aerocm/climate_models/: aviation_climate_simulation.py  fair_climate_model.py  (+4 more)
aerometrics/: EF_and_RF_per_contrail_length_2019.nc  Untitled.ipynb  climate_models_uncertainties.ipynb  example_simulation.ipynb  map-Copy1.ipynb  metrics_basic.ipynb  metrics_time_horizon_sensitivity.ipynb  output_mean.nc  paper.ipynb  route_contrails.ipynb  seg_length_km_GAIA_2019.nc  sensitivity_analyses.ipynb
climate_data/: erf_nox_lee.csv
climate_models/: climate_models.py  co2_ipcc_climate_model.py  fair.py  fair_climate_model.py  fair_emulator.py  gwpstar_climate_model.py  lwe_climate_model.py
functions/: functions.py
metrics/: metrics.py
utils/: functions.py
(+50 files in other folders)
